# server/immich-openapi-specs.json
@@ -6478,6 +6478,12 @@
           "clipEncoding": {
             "$ref": "#/components/schemas/JobStatusDto"
           },
+          "faceDetection": {
+            "$ref": "#/components/schemas/JobStatusDto"
+          },
+          "facialRecognition": {
+            "$ref": "#/components/schemas/JobStatusDto"
+          },
           "library": {
             "$ref": "#/components/schemas/JobStatusDto"
           },
@@ -6488,9 +6494,6 @@
             "$ref": "#/components/schemas/JobStatusDto"
           },
           "objectTagging": {
-            "$ref": "#/components/schemas/JobStatusDto"
-          },
-          "recognizeFaces": {
             "$ref": "#/components/schemas/JobStatusDto"
           },
           "search": {
@@ -6519,7 +6522,8 @@
           "migration",
           "backgroundTask",
           "search",
-          "recognizeFaces",
+          "faceDetection",
+          "facialRecognition",
           "sidecar",
           "library"
         ],
@@ -7825,7 +7829,8 @@
           "metadataExtraction",
           "videoConversion",
           "objectTagging",
-          "recognizeFaces",
+          "faceDetection",
+          "facialRecognition",
           "clipEncoding",
           "backgroundTask",
           "storageTemplateMigration",
@@ -9175,6 +9180,12 @@
           "clipEncoding": {
             "$ref": "#/components/schemas/JobSettingsDto"
           },
+          "faceDetection": {
+            "$ref": "#/components/schemas/JobSettingsDto"
+          },
+          "facialRecognition": {
+            "$ref": "#/components/schemas/JobSettingsDto"
+          },
           "library": {
             "$ref": "#/components/schemas/JobSettingsDto"
           },
@@ -9185,9 +9196,6 @@
             "$ref": "#/components/schemas/JobSettingsDto"
           },
           "objectTagging": {
-            "$ref": "#/components/schemas/JobSettingsDto"
-          },
-          "recognizeFaces": {
             "$ref": "#/components/schemas/JobSettingsDto"
           },
           "search": {
@@ -9216,7 +9224,8 @@
           "migration",
           "backgroundTask",
           "search",
-          "recognizeFaces",
+          "faceDetection",
+          "facialRecognition",
           "sidecar",
           "library"
         ],
