# server/src/domain/system-config/system-config.core.ts
@@ -48,7 +48,8 @@ export const defaults = Object.freeze<SystemConfig>({
     [QueueName.CLIP_ENCODING]: { concurrency: 2 },
     [QueueName.METADATA_EXTRACTION]: { concurrency: 5 },
     [QueueName.OBJECT_TAGGING]: { concurrency: 2 },
-    [QueueName.RECOGNIZE_FACES]: { concurrency: 2 },
+    [QueueName.FACE_DETECTION]: { concurrency: 2 },
+    [QueueName.FACIAL_RECOGNITION]: { concurrency: 1 },
     [QueueName.SEARCH]: { concurrency: 5 },
     [QueueName.SIDECAR]: { concurrency: 5 },
     [QueueName.LIBRARY]: { concurrency: 5 },
